--- a/assets/css/style copy.css
+++ b/assets/css/style copy.css
@@ -702,11 +702,11 @@ label {
     padding-left: 25px;
 }
 
-.pl-30 {
+.ps-30 {
     padding-left: 30px;
 }
 
-.pl-35 {
+.ps-35 {
     padding-left: 35px;
 }
 
