--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,11 +703,11 @@ label {
     padding-left: 25px;
 }
 
-.pl-30 {
+.ps-30 {
     padding-left: 30px;
 }
 
-.pl-35 {
+.ps-35 {
     padding-left: 35px;
 }
 
@@ -1980,4 +1980,67 @@ label {
     color: #fff;
     background-color: #FBC531;
     border-color: #FBC531;
+}
+
+
+ .blog-item img {
+    transition: .5s;
+  }
+  
+  .blog-item:hover img {
+    transform: scale(1.2);
+  }
+  
+  .blog-overlay {
+    position: absolute;
+    padding: 30px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    background: linear-gradient(rgba(68, 66, 90, 0), #44425a);
+    z-index: 1;
+  }
+  
+  .blog-area input-group-append {
+    margin-left: -1px;
+}
+.blog-area  .input-group-prepend, .input-group-append {
+    display: flex;
+}
+
+.btn-outline-theme {
+    color: #6856F8;
+    border-color: #6856F8;
+}
+
+.blog-area  .page-item.active .page-link {
+    z-index: 3;
+    color: rgb(255, 255, 255);
+    background-color: #6856F8;
+    border-color: #6856F8;
+}
+
+.blog-area  .pagination-lg .page-link {
+    font-size: 1.25rem;
+    line-height: 1.5;
+    padding: 0.75rem 1.5rem;
+}
+
+.blog-area  .page-link {
+    position: relative;
+    display: block;
+    margin-left: -1px;
+    line-height: 1.25;
+    color: #6856F8;
+    background-color: rgb(255, 255, 255);
+    padding: 0.5rem 0.75rem;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(222, 226, 230);
+    border-image: initial;
 }
