--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1988,9 +1988,13 @@ label {
     transition: .5s;
   }
   
-  .blog-item:hover img {
+  /* .blog-item:hover img {
     transform: scale(1.2);
-  }
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+} */
   
   .blog-overlay {
     position: absolute;
